Updates for (Cray-Xt) Franklin computer... Not checking in 'configure' from this machine as autoconf is wrong version.

--- a/configure.ac
+++ b/configure.ac
@@ -390,7 +390,7 @@ SCI_ARG_WITH(xalan,
 
 SCI_ARG_WITH(libxml2,
   AC_HELP_STRING(--with-libxml2=DIR,
-                 Use the libxml2 installation in DIR),
+                 Use the libxml2 installation in DIR.  Set 'DIR' to 'built-in' if explicit linking of xml2 is NOT required.),
   [with_libxml2="$withval"
    sci_required_libxml2=yes],
   [with_libxml2=""])
@@ -429,8 +429,8 @@ SCI_ARG_ENABLE(wasatch_3p,
 
 SCI_ARG_ENABLE(static,
   AC_HELP_STRING(--enable-static,
-                 Build a statically linked version of Uintah),
-  [static="yes"],
+                 Build a statically linked version of Uintah.  Set to 'full' to force full static link.),
+  [static="$enableval"],
   [static="no"])
 SCI_ARG_ENABLE(verbosity,
   AC_HELP_STRING(--enable-verbosity,
@@ -559,7 +559,7 @@ myargs=`echo $args | sed 's%\^% %g'`
 ## Cut off the /configure from the configure command (eg: ../src/configure)
 path_to_src=`echo $0 | sed 's/\/configure//'`
 
-if test "$sci_required_petsc" = "yes"; then
+if test "$sci_required_petsc" = "yes" -a "$with_petsc" != "built-in"; then
    sci_required_blas=yes
    sci_required_lapack=yes
 fi
@@ -1026,11 +1026,22 @@ fi
 IS_STATIC_BUILD="no"
 
 # If --enable-static, or if lib extension already set to 'a' (eg: AIX):
-if test "$static" = "yes" -o "$SO_OR_ARCHIVE_EXTENSION" = "a"; then
+if test "$static" != "no" -o "$SO_OR_ARCHIVE_EXTENSION" = "a"; then
   AC_MSG_WARN( Building a statically linked version of Uintah! )
   IS_STATIC_BUILD="yes"
   SO_OR_ARCHIVE_EXTENSION=a
-#  LDFLAGS="$LDFLAGS -static"   # FIXME... need -static (at least for gcc)...
+  if test "$static" == "full"; then
+
+    # If we don't use the 'full' option, then some shared libs may be
+    # linked in.  While we probably should make 'full' the default, this
+    # ends up breaking a number of (our test) machines that don't have (all the) static
+    # libraries installed.  As 'static' is really used only on specific/large 
+    # supercomputers (Crays mostly), and we only/mostly use it on
+    # small machines to check for circular dependancies, it is ok to not use
+    # '-static' in most cases.
+
+    LDFLAGS="${LDFLAGS} -static"
+  fi
   MAKE_ARCHIVES="yes"
   STATIC_BUILD_DEF="#define STATIC_BUILD 1"
 else
@@ -2109,73 +2120,79 @@ if test "$with_libxml2"; then
    _sci_optional=specific
 fi
 
-AC_MSG_CHECKING(for $_sci_optional libxml2)
-if test ! -e $_sci_lib/../bin/xml2-config; then
-   AC_MSG_RESULT(Not found under $_sci_lib)
-   AC_MSG_CHECKING(for xml2-config in your path)
-   XML2_DIR=`xml2-config --prefix`
-   if test -e "$XML2_DIR/lib"; then
-      _sci_lib=$XML2_DIR/lib
-      AC_MSG_RESULT(xml2-config found...)
-   else
-      AC_MSG_RESULT(xml2-config program not found...)
-   fi
-fi
+if test "$with_libxml2" == "built-in"; then
+  XML2_LIB_FLAG="-lxml2"
+  AC_MSG_RESULT( "Using built in libxml2... no explicit linking will be done." )
+else
 
-found_xml2_config="no"
+  AC_MSG_CHECKING(for $_sci_optional libxml2)
+  if test ! -e $_sci_lib/../bin/xml2-config; then
+     AC_MSG_RESULT(Not found under $_sci_lib)
+     AC_MSG_CHECKING(for xml2-config in your path)
+     XML2_DIR=`xml2-config --prefix`
+     if test -e "$XML2_DIR/lib"; then
+        _sci_lib=$XML2_DIR/lib
+        AC_MSG_RESULT(xml2-config found...)
+     else
+        AC_MSG_RESULT(xml2-config program not found...)
+     fi
+  fi
 
-if test -e $_sci_lib/../bin/xml2-config; then
-    found_xml2_config="yes"
-    AC_MSG_WARN(Using $_sci_lib/../bin/xml2-config to set libxml2 variables.)
+  found_xml2_config="no"
 
-    if test "$IS_STATIC_BUILD" = "yes" -a "$IS_OSX" != "yes"; then
-       STATIC_FLAG=--static
-    fi
+  if test -e $_sci_lib/../bin/xml2-config; then
+      found_xml2_config="yes"
+      AC_MSG_WARN(Using $_sci_lib/../bin/xml2-config to set libxml2 variables.)
 
-    XML2_LIB_DIR_FLAG=`$_sci_lib/../bin/xml2-config --libs $STATIC_FLAG`
-    XML2_LDFLAGS=""
-    XML2_LIB_PATH=""
-    for i in $XML2_LIB_DIR_FLAG;do
-      is_lib_path=`echo $i | sed -n -e "s/-L//p"`
-      if test -z "$is_lib_path";then
-        XML2_LDFLAGS="$XML2_LDFLAGS $i"
-      else 
-        if ! test $i = "-L/usr/lib";then
-    	XML2_LIB_PATH="$XML2_LIB_PATH $i"
-        fi
+      if test "$IS_STATIC_BUILD" = "yes" -a "$IS_OSX" != "yes"; then
+        STATIC_FLAG=--static
       fi
-    done
-    includes=`$_sci_lib/../bin/xml2-config --cflags`
-fi
-SCI_TRY_LINK(XML2,xml2 library and headers,libxml/tree.h libxml/parser.h,
-              $includes,$XML2_LDFLAGS,$XML2_LIB_PATH,,[
-#if defined(LIBXML_TREE_ENABLED) && defined(LIBXML_OUTPUT_ENABLED)
-xmlDocPtr doc = NULL;       /* document pointer */
-xmlNodePtr root_node = NULL, node = NULL, node1 = NULL;/* node pointers */
-xmlDtdPtr dtd = NULL;       /* DTD pointer */
-char buff[256];
-int i, j;
 
-LIBXML_TEST_VERSION;
+      XML2_LIB_DIR_FLAG=`$_sci_lib/../bin/xml2-config --libs $STATIC_FLAG`
+      XML2_LDFLAGS=""
+      XML2_LIB_PATH=""
+      for i in $XML2_LIB_DIR_FLAG;do
+        is_lib_path=`echo $i | sed -n -e "s/-L//p"`
+        if test -z "$is_lib_path";then
+          XML2_LDFLAGS="$XML2_LDFLAGS $i"
+        else 
+          if ! test $i = "-L/usr/lib";then
+            XML2_LIB_PATH="$XML2_LIB_PATH $i"
+          fi
+        fi
+      done
+      includes=`$_sci_lib/../bin/xml2-config --cflags`
+  fi
+  SCI_TRY_LINK(XML2,xml2 library and headers,libxml/tree.h libxml/parser.h,
+                $includes,$XML2_LDFLAGS,$XML2_LIB_PATH,,[
+  #if defined(LIBXML_TREE_ENABLED) && defined(LIBXML_OUTPUT_ENABLED)
+  xmlDocPtr doc = NULL;       /* document pointer */
+  xmlNodePtr root_node = NULL, node = NULL, node1 = NULL;/* node pointers */
+  xmlDtdPtr dtd = NULL;       /* DTD pointer */
+  char buff[256];
+  int i, j;
 
-/*
-  * Creates a new document, a node and set it as a root node
-  */
-doc = xmlNewDoc(BAD_CAST "1.0");
-root_node = xmlNewNode(NULL, BAD_CAST "root");
-xmlDocSetRootElement(doc, root_node);
-#else
-//create compile error so configure fails
-WrongVersionOrNotInstalled *x = 0;
-#endif
-],required)
+  LIBXML_TEST_VERSION;
 
-DEF_XML2="#define HAVE_XML2 1"
-break
+  /*
+    * Creates a new document, a node and set it as a root node
+    */
+  doc = xmlNewDoc(BAD_CAST "1.0");
+  root_node = xmlNewNode(NULL, BAD_CAST "root");
+  xmlDocSetRootElement(doc, root_node);
+  #else
+  //create compile error so configure fails
+  WrongVersionOrNotInstalled *x = 0;
+  #endif
+  ],required)
 
-if test ! "$DEF_XML2"; then
-  echo
-  AC_MSG_ERROR(One or more of the xml2 components is missing.)
+  DEF_XML2="#define HAVE_XML2 1"
+  break
+
+  if test ! "$DEF_XML2"; then
+    echo
+    AC_MSG_ERROR(One or more of the xml2 components is missing.)
+  fi
 fi
 
 AC_SUBST(XML2_LIB_FLAG)
@@ -3210,146 +3227,148 @@ if test -z "$PETSC_ARCH"; then
    AC_MSG_ERROR(PETSC_ARCH environment var is not set.  Please set.)
 fi
 
-# Handle --without option
-
-if test "$with_petsc" == "no"; then
+if test "$with_petsc" == "no"; then # Handle --without option
   AC_MSG_WARN( "PETSc disabled." )
 else  
 
-  # Make sure we have either mpi or mpi-uni, blas, and lapack
-  # It seems that under AIX and OSF, the libs that cover blas also cover lapack
-  if (test "$HAVE_MPI" = "yes" || test "$HAVE_MPI_UNI" = "yes") && test "$HAVE_BLAS" = "yes" && 
-     (test "$PETSC_ARCH" = "aix5.1.0.0" || test "$PETSC_ARCH" = "dec" ||
-      test "$HAVE_LAPACK" = "yes"); then
+  if test "$with_petsc" == "built-in"; then
+     HAVE_PETSC="yes"
+     DEF_PETSC="#define HAVE_PETSC 1"
+  else
+    # Make sure we have either mpi or mpi-uni, blas, and lapack
+    # It seems that under AIX and OSF, the libs that cover blas also cover lapack
+    if (test "$HAVE_MPI" = "yes" || test "$HAVE_MPI_UNI" = "yes") && test "$HAVE_BLAS" = "yes" && 
+       (test "$PETSC_ARCH" = "aix5.1.0.0" || test "$PETSC_ARCH" = "dec" ||
+        test "$HAVE_LAPACK" = "yes"); then
 
-    _sci_lib_dir=
-    _sci_inc=
+      _sci_lib_dir=
+      _sci_inc=
 
-    for petsc_arch in "$PETSC_ARCH" linux-gnu linux-gnu-c-opt; do
-      if test "$HAVE_PETSC" = "yes"; then
-        break
-      fi
-
-      PETSC_SUB=lib/libO
-
-      if test "$with_petsc"; then
-
-        ####################################################
-        # The newer (2.3+) versions of petsc don't use the libO anymore...
-        have23=`echo "$with_petsc" | grep "2.3."`
-        if test -z "$have23" ; then
-           petsc_version_major=`grep PETSC_VERSION_MAJOR $with_petsc/include/petscversion.h | grep define | awk '{print $3}'`
-           petsc_version_minor=`grep PETSC_VERSION_MINOR $with_petsc/include/petscversion.h | grep define | awk '{print $3}'`
-           if test "$petsc_version_major" -eq 2 ; then
-              if test "$petsc_version_minor" -eq 3 ; then
-                 have23=true
-              fi
-           fi
+      for petsc_arch in "$PETSC_ARCH" linux-gnu linux-gnu-c-opt; do
+        if test "$HAVE_PETSC" = "yes"; then
+          break
         fi
-        if test "$have23"; then
-           PETSC_SUB=lib
+
+        PETSC_SUB=lib/libO
+
+        if test "$with_petsc"; then
+
+          ####################################################
+          # The newer (2.3+) versions of petsc don't use the libO anymore...
+          have23=`echo "$with_petsc" | grep "2.3."`
+          if test -z "$have23" ; then
+             petsc_version_major=`grep PETSC_VERSION_MAJOR $with_petsc/include/petscversion.h | grep define | awk '{print $3}'`
+             petsc_version_minor=`grep PETSC_VERSION_MINOR $with_petsc/include/petscversion.h | grep define | awk '{print $3}'`
+             if test "$petsc_version_major" -eq 2 ; then
+                if test "$petsc_version_minor" -eq 3 ; then
+                   have23=true
+                fi
+             fi
+          fi
+          if test "$have23"; then
+             PETSC_SUB=lib
+          fi
+          ####################################################
+
+          _sci_lib_dir="$with_petsc/$PETSC_SUB/$petsc_arch"
+          _sci_inc="$with_petsc/bmake/$petsc_arch $with_petsc/include"
+        else
+          # Modify _sci_dirs to have correct path information:
+          for i in $sci_thirdparty_dir; do
+            if test ! -d "$i"; then
+              continue
+            fi
+
+            # This is where the lib actually lives
+            if test ! -d "$i/$PETSC_VERSION_DIR/$PETSC_SUB/$petsc_arch"; then
+              continue
+            fi
+
+            _sci_lib_dir="$_sci_lib_dir $i/$PETSC_VERSION_DIR/$PETSC_SUB/$petsc_arch"
+            _sci_inc="$_sci_inc $i/$PETSC_VERSION_DIR/include $i/$PETSC_VERSION_DIR/bmake/$petsc_arch"
+          done  
         fi
-        ####################################################
 
-        _sci_lib_dir="$with_petsc/$PETSC_SUB/$petsc_arch"
-        _sci_inc="$with_petsc/bmake/$petsc_arch $with_petsc/include"
-      else
-        # Modify _sci_dirs to have correct path information:
-        for i in $sci_thirdparty_dir; do
-          if test ! -d "$i"; then
-            continue
-          fi
+        # For Petsc 2.2 use this line below:   petsc petscvec petscmat petscdm petscsnes petscts petscksp $LAPACK_LIB_FLAG $BLAS_LIB_FLAG $M_LIB_FLAG $MPI_LIB_FLAG $F_LIB_DIR_FLAG $F_LIB_FLAG $DL_LIB_FLAG,
+        # Use -DMPIPP_H so we don't include mpi++.h where we don't want it.
 
-          #this is where the lib actually lives
-          if test ! -d "$i/$PETSC_VERSION_DIR/$PETSC_SUB/$petsc_arch"; then
-            continue
-          fi
-
-          _sci_lib_dir="$_sci_lib_dir $i/$PETSC_VERSION_DIR/$PETSC_SUB/$petsc_arch"
-          _sci_inc="$_sci_inc $i/$PETSC_VERSION_DIR/include $i/$PETSC_VERSION_DIR/bmake/$petsc_arch"
-        done  
-      fi
-
-      # For Petsc 2.2 use this line below:   petsc petscvec petscmat petscdm petscsnes petscts petscksp $LAPACK_LIB_FLAG $BLAS_LIB_FLAG $M_LIB_FLAG $MPI_LIB_FLAG $F_LIB_DIR_FLAG $F_LIB_FLAG $DL_LIB_FLAG,
-      # Use -DMPIPP_H so we don't include mpi++.h where we don't want it.
-
-      SCI_TRY_LINK(PETSC,
-                   petsc libraries and headers (petsc_arch = $petsc_arch),
-                   petsc.h,
-                   $_sci_inc /usr/include/petsc,
-                   petsc petscvec petscmat petscdm petscsnes petscts petscksp,
-                   $_sci_lib_dir,
-                   $INC_MPI_H -DMPIPP_H $LAPACK_LIB_DIR_FLAG $LAPACK_LIB_FLAG $BLAS_LIB_DIR_FLAG $BLAS_LIB_FLAG $MALLOC_TRACE_LIB_DIR_FLAG $MALLOC_TRACE_LIB_FLAG $M_LIB_FLAG $MPI_LIB_DIR_FLAG $MPI_LIB_FLAG $F_LIB_DIR_FLAG $F_LIB_FLAG $DL_LIB_FLAG $THREAD_LIB_FLAG,
-                   ,
-                   optional)
-
-      if test "$HAVE_PETSC" = "yes" ; then
-        DEF_PETSC="#define HAVE_PETSC 1"
-      fi    
-    done  
-    if test "$with_petsc" && test ! "$DEF_PETSC"; then
-      echo
-      AC_MSG_ERROR(One or more of the PETSc components is missing.)
-      echo
-    fi
-
-    #  --  search for uni-petsc  --------------------------------------------
-
-    if test "$HAVE_PETSC" != "yes" ; then
-
-      # Only check for uni petsc if petsc not found.
-      _sci_lib=""
-      _sci_inc=""
-
-      if test "$with_unipetsc"; then
-        _sci_lib="$with_unipetsc/$PETSC_SUB/$PETSC_ARCH"
-        _sci_inc="$with_unipetsc/bmake/$PETSC_ARCH $with_unipetsc/include"
-      fi
-
-      # For petsc 2.2 use this line below:  petsc petscvec petscmat petscdm petscsnes petscts petscksp,
-      # Use -DMPIPP_H so we don't include mpi++.h where we don't want it.
-      SCI_TRY_LINK(PETSC_UNI,
-                   petsc-uni libraries and headers,
-                   petsc.h,
-                   $_sci_inc /usr/include/petsc,
-                   petsc petscvec petscmat petscdm petscsnes petscts petscksp,
-                   $_sci_lib,
-                   $LAPACK_LIB_DIR_FLAG $LAPACK_LIB_FLAG $BLAS_LIB_DIR_FLAG $BLAS_LIB_FLAG $M_LIB_FLAG $INC_MPI_UNI_H $MPI_UNI_LIB_DIR_FLAG $MPI_UNI_LIB_FLAG $F_LIB_DIR_FLAG $F_LIB_FLAG -DMPIPP_H,
-                   ,
-                   optional)
-
-      if test "$HAVE_PETSC_UNI" = "yes" ; then
-        DEF_PETSC_UNI="#define PETSC_UNI 1"
-      else
-        # Give it a shot on the old petsc-uni version
-        SCI_TRY_LINK(PETSC_UNI,
-                     petsc libraries and headers - old2,
+        SCI_TRY_LINK(PETSC,
+                     petsc libraries and headers (petsc_arch = $petsc_arch),
                      petsc.h,
                      $_sci_inc /usr/include/petsc,
-                     petsc petscvec petscmat petscdm petscsnes petscts,
+                     petsc petscvec petscmat petscdm petscsnes petscts petscksp,
+                     $_sci_lib_dir,
+                     $INC_MPI_H -DMPIPP_H $LAPACK_LIB_DIR_FLAG $LAPACK_LIB_FLAG $BLAS_LIB_DIR_FLAG $BLAS_LIB_FLAG $MALLOC_TRACE_LIB_DIR_FLAG $MALLOC_TRACE_LIB_FLAG $M_LIB_FLAG $MPI_LIB_DIR_FLAG $MPI_LIB_FLAG $F_LIB_DIR_FLAG $F_LIB_FLAG $DL_LIB_FLAG $THREAD_LIB_FLAG,
+                     ,
+                     optional)
+
+        if test "$HAVE_PETSC" = "yes" ; then
+          DEF_PETSC="#define HAVE_PETSC 1"
+        fi    
+      done  
+      if test "$with_petsc" && test ! "$DEF_PETSC"; then
+        echo
+        AC_MSG_ERROR(One or more of the PETSc components is missing.)
+        echo
+      fi
+
+      #  --  search for uni-petsc  --------------------------------------------
+
+      if test "$HAVE_PETSC" != "yes" ; then
+
+        # Only check for uni petsc if petsc not found.
+        _sci_lib=""
+        _sci_inc=""
+
+        if test "$with_unipetsc"; then
+          _sci_lib="$with_unipetsc/$PETSC_SUB/$PETSC_ARCH"
+          _sci_inc="$with_unipetsc/bmake/$PETSC_ARCH $with_unipetsc/include"
+        fi
+
+        # For petsc 2.2 use this line below:  petsc petscvec petscmat petscdm petscsnes petscts petscksp,
+        # Use -DMPIPP_H so we don't include mpi++.h where we don't want it.
+        SCI_TRY_LINK(PETSC_UNI,
+                     petsc-uni libraries and headers,
+                     petsc.h,
+                     $_sci_inc /usr/include/petsc,
+                     petsc petscvec petscmat petscdm petscsnes petscts petscksp,
                      $_sci_lib,
                      $LAPACK_LIB_DIR_FLAG $LAPACK_LIB_FLAG $BLAS_LIB_DIR_FLAG $BLAS_LIB_FLAG $M_LIB_FLAG $INC_MPI_UNI_H $MPI_UNI_LIB_DIR_FLAG $MPI_UNI_LIB_FLAG $F_LIB_DIR_FLAG $F_LIB_FLAG -DMPIPP_H,
                      ,
                      optional)
+
         if test "$HAVE_PETSC_UNI" = "yes" ; then
           DEF_PETSC_UNI="#define PETSC_UNI 1"
-        fi  
-      fi
+        else
+          # Give it a shot on the old petsc-uni version
+          SCI_TRY_LINK(PETSC_UNI,
+                       petsc libraries and headers - old2,
+                       petsc.h,
+                       $_sci_inc /usr/include/petsc,
+                       petsc petscvec petscmat petscdm petscsnes petscts,
+                       $_sci_lib,
+                       $LAPACK_LIB_DIR_FLAG $LAPACK_LIB_FLAG $BLAS_LIB_DIR_FLAG $BLAS_LIB_FLAG $M_LIB_FLAG $INC_MPI_UNI_H $MPI_UNI_LIB_DIR_FLAG $MPI_UNI_LIB_FLAG $F_LIB_DIR_FLAG $F_LIB_FLAG -DMPIPP_H,
+                       ,
+                       optional)
+          if test "$HAVE_PETSC_UNI" = "yes" ; then
+            DEF_PETSC_UNI="#define PETSC_UNI 1"
+          fi  
+        fi
 
-      if test "$with_unipetsc" && test ! "$DEF_PETSC_UNI"; then
-        echo
-        AC_MSG_ERROR(One or more of the UNI-PETSC components is missing.)
-        echo
+        if test "$with_unipetsc" && test ! "$DEF_PETSC_UNI"; then
+          echo
+          AC_MSG_ERROR(One or more of the UNI-PETSC components is missing.)
+          echo
+        fi
       fi
+    else
+      AC_MSG_WARN(One or more of MPI or BLAS or LAPACK is missing.)
+      AC_MSG_WARN(HAVE_MPI: $HAVE_MPI)
+      AC_MSG_WARN(HAVE_MPI_UNI: $HAVE_MPI_UNI)
+      AC_MSG_WARN(HAVE_BLAS: $HAVE_BLAS)
+      AC_MSG_WARN(HAVE_LAPACK: $HAVE_LAPACK)
+      AC_MSG_WARN(Not configuring PETSc.)
     fi
-
-  else
-    AC_MSG_WARN(One or more of MPI or BLAS or LAPACK is missing.)
-    AC_MSG_WARN(HAVE_MPI: $HAVE_MPI)
-    AC_MSG_WARN(HAVE_MPI_UNI: $HAVE_MPI_UNI)
-    AC_MSG_WARN(HAVE_BLAS: $HAVE_BLAS)
-    AC_MSG_WARN(HAVE_LAPACK: $HAVE_LAPACK)
-    AC_MSG_WARN(Not configuring PETSc.)
   fi
 fi
 
@@ -3766,8 +3785,11 @@ AC_SUBST(EXPRLIB_LIB_DIR_FLAG)
 ##  --  search for TabProps ------------------------
 
 if test "$with_tabprops"; then
+
   if test "$HAVE_HDF5" != "yes"; then
-    AC_MSG_ERROR( --with-tabprops=DIR requires HDF5. )
+    # I think HDF5 is optional now for TabProps, but am not quite sure... 
+    AC_MSG_WARN( --with-tabprops=DIR might require HDF5... )
+    add_important_warning "--with-tabprops was specified, but HDF5 was not... this might cause a problem."
   fi
 
   if test "$with_tabprops" = "yes"; then
