--- a/src/include/sci_defs/compile_testdefs.h.in
+++ b/src/include/sci_defs/compile_testdefs.h.in
@@ -32,6 +32,10 @@
 
 #define MAKE_COMMAND "@MAKE@"
 
+// This define is used to allow the code to display (some of) the
+// flags that were used to compile it.
+#define CFLAGS "@CFLAGS@"
+
 #ifdef _MSC_VER
 #  define PATH_TO_VC "@PATH_TO_VC@"
 #  define PATH_TO_PSDK "@PATH_TO_PSDK@"
