--- a/src/scripts/buildbot/master.cfg
+++ b/src/scripts/buildbot/master.cfg
@@ -130,8 +130,8 @@ compiler_env = {'CC' : '/usr/lib/ccache/gcc',
 		'LANG' : ''
 		}
 
-compiler_env_32 = {'CC' : 'gcc-4.4',
-		'CXX' : 'g++-4.4',
+compiler_env_32 = {'CC' : '/usr/lib/ccache/gcc',
+		'CXX' : '/usr/lib/ccache/g++',
 		'F77' : 'gfortran-4.4',
 		'SCI_MAKE_BE_QUIET' : 'true',
 		'LANG' : ''
@@ -166,11 +166,23 @@ dbg_configure_command_32 = dbg_configure + ["--enable-static"]
 opt_configure_command = ["../src/configure", 
                          "--enable-optimize=-O3 -mfpmath=sse", 
                          "--enable-64bit", "--enable-assertion-level=0",
-                         "--disable-sci-malloc" ]
+                         "--disable-sci-malloc"
+			]
+
+wasatch_configure = ["--enable-wasatch_3p",
+#                     "--with-boost=/usr/local/boost",
+                     "--with-boost=/usr",
+                     "--with-hdf5" 
+		    ]
+
+opt_configure_command = opt_configure_command + wasatch_configure
 
 malloc_trace = ["--with-MallocTrace=/usr/local/MallocTrace"]
 
 opt_nightly_configure_command = opt_configure_command + malloc_trace
+
+dbg_nightly_configure_command = dbg_configure_command + wasatch_configure
+
 
 rt_command = ["../../src/scripts/regression_tester", "-exact", "-restart", "-nice"]
 
@@ -184,7 +196,7 @@ def AddTestStep(fac,test_case,build_type):
 		    timeout=60*60,  # timeout after 1 hour
                     name=test_case + "_test")
 
-tests=["arches","examples","models","ice","ice_amr","mpm","mpmice","mpmice_amr","impm","mpmarches"]
+tests=["wasatch","arches","examples","models","ice","ice_amr","mpm","mpmice","mpmice_amr","impm","mpmarches"]
 
 #tests=["mpmarches"]
 
@@ -340,7 +352,7 @@ night_f.addStep(source.SVN, svnurl=source_code_svn_url, directory='build/src',
 	        mode="update",retry=(10,2))
 
 night_f.addStep(shell.Configure,
-                command=dbg_configure_command,
+                command=dbg_nightly_configure_command,
                 env=compiler_env,
                 workdir='build/dbg')
 
@@ -397,7 +409,7 @@ night_f.addStep(TransferTestResults(workdir='build/opt/StandAlone',
 #### BUILDERS #####
 
 doc_squeeze = {'name': "Documentation-Builder",
-               'slavenames':[ "Squeeze_64","Inferno"]
+               'slavenames':[ "Squeeze_64","Inferno"],
 #               'slavename': "Squeeze_64",
                'builddir': "uintah_doc",
                'factory': doc_f,
@@ -429,7 +441,7 @@ inferno_42_builder = {'name': "inferno-linux-42",
 
 ql_squeeze_32 = {'name': "Linux-Debug-32bit-Static-Libraries",
 #                 'slavename': "Squeeze_32",
-                 'slavenames': ["Squeeze_32","Inferno"]
+                 'slavenames': ["Squeeze_32","Inferno"],
                  'builddir': "uintah_quick_32",
                  'factory': debug_f_32,
                  }
@@ -462,8 +474,8 @@ from buildbot.status import html
 c['status'].append(html.WebStatus(http_port="8010",allowForce=True))
 
 from buildbot.status import mail
-c['status'].append(mail.MailNotifier(fromaddr="csafe-homebrew@cs.utah.edu",
-                                     extraRecipients=["csafe-homebrew@cs.utah.edu"],
+c['status'].append(mail.MailNotifier(fromaddr="uintah-developer@gforge.sci.utah.edu",
+                                     extraRecipients=["uintah-developer@gforge.sci.utah.edu"],
                                      sendToInterestedUsers=True,
 				     lookup="sci.utah.edu",
 				     mode="failing"))
