--- a/configVars.mk.in
+++ b/configVars.mk.in
@@ -261,7 +261,7 @@ FINCLUDES += -I$(SRCTOP) -I$(OBJTOP) -I$(OBJTOP)/include
 BUILD_ICE=@BUILD_ICE@
 BUILD_MPM=@BUILD_MPM@
 BUILD_ARCHES=@BUILD_ARCHES@
-BUILD_RADIATION=@BUILD_RADIATION@
+BUILD_MODELS_RADIATION=@BUILD_MODELS_RADIATION@
 BUILD_WASATCH=@BUILD_WASATCH@
 
 SSTREAM_COMPAT := @SSTREAM_COMPAT@
