--- a/scripts/buildbot/master.cfg
+++ b/scripts/buildbot/master.cfg
@@ -79,7 +79,10 @@ inferno_42 = scheduler.Dependent(name="inferno-build-4.2",
 quick_32 = scheduler.Dependent(name="quick-build-32",
                                upstream=quick,
                                builderNames=["Linux-Debug-32bit-Static-Libraries"])
-
+                               
+quickWasatch = scheduler.Scheduler(name="quick-wasatch", branch=None,
+                            treeStableTimer=1*60, # wait 1 minutes
+                            builderNames=["Linux-dbg-static-Wasatch"])
 
 full = scheduler.Dependent(name="full-build & test", 
 			   upstream=quick_32,
@@ -95,7 +98,7 @@ doc = scheduler.Scheduler(name="doc-build",branch=None,
 			  builderNames=["Documentation-Builder"])
 
 c['schedulers'] = []
-c['schedulers'] = [ doc, quick, quick_32, inferno,inferno_41, inferno_42,full, night ]
+c['schedulers'] = [ doc, quick, quick_32, quickWasatch, inferno,inferno_41, inferno_42,full, night ]
 #c['schedulers'] = [ doc, quick, quick_32, full, night ]
 
 
@@ -161,7 +164,20 @@ dbg_configure = ["../src/configure", "--enable-debug", "--enable-sci-malloc" ]
 
 dbg_configure_command = dbg_configure + ["--enable-64bit"] 
 
-dbg_configure_command_32 = dbg_configure + ["--enable-static"] 
+dbg_configure_command_32 = dbg_configure + ["--enable-static"]
+
+wasatch_configure_command = ["../src/configure", 
+                             "--enable-debug", 
+                             "--enable-64bit",
+                             "--with-hdf5",
+                             "--with-boost=/usr",
+                             "--enable-wasatch_3p",
+                             "--enable-static",
+                             "--without-fortran",
+                             "USE_MPM=no USE_ICE=no USE_MPMICE=no USE_ARCHES=no USE_MODELS_RADIATION=no",
+                             "USE_WASATCH=yes" ]
+                         
+
 
 opt_configure_command = ["../src/configure", 
                          "--enable-optimize=-O3 -mfpmath=sse", 
@@ -289,6 +305,24 @@ debug_f_32.addStep(shell.Compile,
                    command=["python", "../src/scripts/make.py", " 4"],
                    env=compiler_env_32,
                    workdir='build/dbg')
+                   
+                   
+                   
+wasatchOnly_f = factory.BuildFactory()
+wasatchOnly_f.addStep(source.SVN, svnurl=source_code_svn_url,
+	           directory='build/src', mode="update",retry=(10,2))
+
+wasatchOnly_f.addStep(shell.Configure,
+           	     command=wasatch_configure_command,
+                   env=compiler_env_42,
+                   workdir='build/dbg')
+
+wasatchOnly_f.addStep(shell.Compile, 
+                   command=["python", "../src/scripts/make.py", " 4"],
+                   env=compiler_env_42,
+                   workdir='build/dbg')                   
+                   
+                   
 
 
 optimize_f = factory.BuildFactory()
@@ -415,6 +449,12 @@ doc_squeeze = {'name': "Documentation-Builder",
                'factory': doc_f,
                }
 
+ql_squeeze_wasatch = {'name': "Linux-dbg-static-Wasatch",
+      'slavename': "Squeeze_64",
+      'builddir':  "wasatch_quick",
+      'factory':    wasatchOnly_f,
+      }
+      
 ql_squeeze = {'name': "Linux-Debug-64bit",
       'slavename': "Squeeze_64",
       'builddir': "uintah_quick",
@@ -458,7 +498,7 @@ nl_squeeze = {'name': "Linux-Debug-Optimize-Test-64bit",
       	      'factory': night_f,
       	     } 
 
-c['builders'] = [doc_squeeze, ql_squeeze, ql_squeeze_32, inferno_builder, inferno_41_builder,inferno_42_builder,fl_squeeze, nl_squeeze]
+c['builders'] = [doc_squeeze, ql_squeeze, ql_squeeze_wasatch, ql_squeeze_32, inferno_builder, inferno_41_builder,inferno_42_builder,fl_squeeze, nl_squeeze]
 #c['builders'] = [doc_squeeze, ql_squeeze, ql_squeeze_32, fl_squeeze, nl_squeeze]
 
 
