--- a/src/scripts/buildbot/master.cfg
+++ b/src/scripts/buildbot/master.cfg
@@ -181,14 +181,14 @@ wasatch_configure_command = ["../src/configure",
 
 opt_configure_command = ["../src/configure", 
                          "--enable-optimize=-O3 -mfpmath=sse", 
-                         "--enable-64bit", "--enable-assertion-level=0",
+                         "--enable-64bit", 
+                         "--enable-assertion-level=0",
                          "--disable-sci-malloc"
                         ]
 
 wasatch_configure = ["--enable-wasatch_3p",
-#                     "--with-boost=/usr/local/boost",
                      "--with-boost=/usr",
-                     "--with-hdf5" 
+                     "USE_WASATCH=yes" 
                     ]
 
 opt_configure_command = opt_configure_command + wasatch_configure
