--- a/configure.ac
+++ b/configure.ac
@@ -3753,7 +3753,7 @@ if test "$wasatch_3p" = "yes"; then
   fi
 
   mkdir -p Wasatch3P
-  $path_to_src/build_scripts/build_wasatch_3p.sh `$sci_pwd` "$with_boost" "$with_hdf5"
+  $path_to_src/build_scripts/build_wasatch_3p.sh `$sci_pwd` "$with_boost"
 
   if test $? != 0; then
      AC_MSG_ERROR( Failed to build Wasatch 3p libraries... )
